# tauri-svelte-template

./: LICENSE  README.md  package.json
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
